xml: Removed crm.dtd from the Makefile

--- a/xml/Makefile.am
+++ b/xml/Makefile.am
@@ -18,7 +18,7 @@
 MAINTAINERCLEANFILES    = Makefile.in
 
 dtddir			= $(CRM_DTD_DIRECTORY)
-dtd_SCRIPTS		= crm.dtd crm-transitional.dtd
+dtd_SCRIPTS		= crm-transitional.dtd
 
 xsltdir			= $(dtddir)
 xslt_SCRIPTS		= upgrade06.xsl upgrade-*.xsl
